// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/null-channel/eddington/proto/container";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "ApplicationServiceProto";

package container;

service ContainerService {
  rpc CreateContainer (CreateContainerRequest) returns (CreateContainerReply) {}
	rpc ImageStatus (ContainerID) returns (ContainerStatus){  }
}






message CreateContainerRequest {
  string repoURL = 1;
	string type = 2;  
}

message CreateContainerReply {
  string message = 1;
}

message ContainerStatus {
	string status = 1;
}

message ContainerID {
	string id = 1;
} 
